syntax = "proto3";

message User {
    string fcmToken = 1;
    string name = 2;
    string whatsappNo = 3;
    string email = 4;
    string verificationCode = 5;
}

message ReviewNotificationRequest {
    string user_uid = 1;
    string business_uid = 2;
    string reason = 3;
}

message Empty{}

service NotificationService{
    rpc SendUserVerificationCode(User) returns (Empty) {}
    rpc SendUserNoticationReviewRejected(ReviewNotificationRequest) returns (Empty) {}
    rpc SendNotificationReviewAccepted(ReviewNotificationRequest) returns (Empty) {}
}
