syntax = "proto3";

package user;

message User {
    string fcmToken = 1;
    string name = 2;
    string whatsappNo = 3;
    string email = 4;
    int32 unsuspendAt = 5;
    string uid = 6;
}

message UserByUidRequest {
    string uid = 1;
}

message Empty{}

service UserService{
    rpc GetUserByUid(UserByUidRequest) returns (user.User) {}
}
